[project]
name = "ooler-ble-client"
version = "0.9.0"
description = "A library to communicate with Ooler Sleep System Bluetooth devices."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Robby Griffin", email = "rgriffin@postlogical.com" },
]
requires-python = ">=3.11,<4.0"
keywords = ["ooler", "ble", "bluetooth", "bleak", "home-assistant", "sleep"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dependencies = [
    "bleak>=0.19.5",
    "bleak-retry-connector>=2.3.0",
]

[project.urls]
Repository = "https://github.com/PostLogical/ooler_ble_client"

[tool.poetry]
packages = [{include = "ooler_ble_client"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.21"
pytest-cov = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
